# web-application

./: README.md
ipfs-http-api-client/: Cargo.toml  book1.json  book2.json  book3.json  library.json  test.json  test2.json
ipfs-http-api-client/create-ipfs-dag/: Cargo.toml
ipfs-http-api-client/read-ipfs-file/: Cargo.toml
ipfs-http-api-client/src/: main.rs
kubernetes-setup/: 10_ipfs-node-pvc.yml  11_ipfs-kubo-pod.yml  12_ipfs-service.yml  1_namespace.yml  2_postgres-configmap.yml  3_postgres-pv.yml  4_postgres-pvc.yml  5_postgres-deployment.yml  6_postgres-service.yml  7_library-deployment.yml  8_library-service.yml  9_ipfs-node-pv.yml  README.md  library-service-dockerfile.dev
kubo-rpc-api/api-v0-add/: Cargo.toml  README.md
kubo-rpc-api/api-v0-dag-put/: Cargo.toml  README.md  library.json
kubo-rpc-api/api-v0-key-import/: Cargo.toml  README.md
kubo-rpc-api/api-v0-name-inspect/: Cargo.toml  IPNS_Record.txt  README.md  signed.ipns-record
kubo-rpc-api/api-v0-routing-put/: Cargo.toml  IPNS_Record.txt  README.md  cid.json
kubo-rpc-api/api-v0-routing-put/src/: main.rs
library-service/: .env  Cargo.toml  README.md  sqlx-data.json
library-service/sql-scripts/: dbLibrary.sql  tbBooks.sql  usAdminLibrary.sql
library-service/src/: dao.rs  errors.rs  handlers.rs  main.rs  model.rs  routes.rs  state.rs
library-service/src/dal/: book.rs
library-service/src/handlers/: book.rs  default.rs  mod.rs
library-service/src/model/sql_scripts/: 1_tbBooks.sql  2_testData.sql
library-ui/:  .env  README.md  package-lock.json  package.json
library-ui/src/: App.tsx  (+3 more)
(+24 files in other folders)
