[package]
name = "api-v0-routing-put"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
awc = { version = "3.1.1", features = [ "openssl" ] }
actix-multipart-rfc7578 = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json= "1.0.94"

chrono = { version = "0.4.24", default-features = false, features = ["clock", "wasmbind"] }
strum = { version = "0.24.1", default-features = false, features = ["derive"] }
prost = { version = "0.11.8", default-features = false, features = ["std", "prost-derive"] }